<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/newEntryTxtID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="@string/new_entry" />

            <TableRow
                android:id="@+id/tableRow1PopupID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/tableRow2PopupID"
                android:layout_below="@+id/newEntryTxtID">

                <EditText
                    android:id="@+id/chinupsPopupID"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tableRow1PopupID"
                    android:layout_below="@+id/newEntryTxtID"
                    android:hint="@string/chinups"
                    android:inputType="number"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/pullupsPopupID"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/pullups"
                    android:inputType="number"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2PopupID"
                android:layout_below="@id/tableRow1PopupID"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/chinupsWithBandPopupID"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:hint="@string/assisted_chinups"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/pullupsWithBandPopupID"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:hint="@string/assisted_pullups"
                    android:inputType="number" />
            </TableRow>

            <Button
                android:id="@+id/createEntryButtonPopupID"
                android:text="@string/create_entry"
                android:layout_below="@id/tableRow2PopupID"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:layout_width="300dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>