<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/row1PUID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/chinupsTVPUID"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="17sp"
                    android:text="@string/chinups" />

                <NumberPicker
                    android:id="@+id/chinupsNPID"
                    android:layout_width="40dp"
                    android:layout_height="135dp"
                    android:layout_marginStart="5dp"/>

                <TextView
                    android:id="@+id/pullupsTVPUID"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="17sp"
                    android:text="@string/pullups" />

                <NumberPicker
                    android:id="@+id/pullupsNPID"
                    android:layout_width="40dp"
                    android:layout_height="135dp"
                    android:layout_marginStart="5dp"/>

            </TableRow>

            <TableRow
                android:id="@+id/row2PUID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/row1PUID"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/assistedChinupsTVPUID"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/assisted_chinups"
                    android:textSize="17sp" />

                <NumberPicker
                    android:id="@+id/assistedChinupsNPID"
                    android:layout_width="40dp"
                    android:layout_height="135dp"
                    android:layout_marginStart="5dp"/>

                <TextView
                    android:id="@+id/assistedPullupsTVPUID"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="17sp"
                    android:text="@string/assisted_pullups" />

                <NumberPicker
                    android:id="@+id/assistedPullupsNPID"
                    android:layout_width="40dp"
                    android:layout_height="135dp"
                    android:layout_marginStart="5dp"/>

            </TableRow>

            <TableRow
                android:id="@+id/row3PUID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/row2PUID"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/createEntryButtonPopupPUID"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/create_entry"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"/>

            </TableRow>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>