<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dateID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="Mon, 20.12.2012"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_below="@id/dateID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/chinUpTxtID"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/chinups"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/chinUpCountID"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:text="000" />

                <TextView
                    android:id="@+id/pullUpTextID"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/pullups"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/pullUpCountID"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:text="000" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_below="@id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/chinUpWithBandTxtID"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/assisted_chinups"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/chinUpWithBandCountID"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:text="000" />

                <TextView
                    android:id="@+id/pullUpWithBandTextID"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/assisted_pullups"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/pullUpWithBandCountID"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:text="000" />
            </TableRow>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>